# ism-model-nn-approximation

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
article-notebooks/: README.md  clustering.ipynb  derivatives.ipynb  nn-regression-clustering.ipynb  nn-regression-dense-clustering.ipynb  nn-regression-dense.ipynb  nn-regression-fc-clustering.ipynb  nn-regression-fc.ipynb  nn-regression.ipynb  plotting.ipynb
article-notebooks/helpers/: lines.py  plots.py  preprocessing.py  results.py  training.py
docs/: conf.py  densely-connected-network.nblink  densely-connected.nblink  derivatives.nblink  embedding-network.nblink  fully-connected-network.nblink  fully-connected.nblink  gallery-examples.rst  index.rst  masking.nblink  merging-network.nblink  modules.rst  nnbma.dataset.rst  nnbma.layers.rst  nnbma.learning.rst  nnbma.networks.rst  nnbma.operators.rst  nnbma.preprocessing.rst  nnbma.rst  operators.nblink  polynomial-expansion.nblink  requirements.txt  restrictable-layer.nblink  training.nblink
example-notebooks/: README.md  derivatives-time.ipynb  derivatives.ipynb  derivatives_time.ipynb  embedding-network.ipynb  functions.py  merging-network.ipynb  polynomial-expansion.ipynb  polynomial_expansion.ipynb  training.ipynb
examples/: README.md  densely-connected-network.ipynb  densely-connected.ipynb  derivatives-time.ipynb  derivatives.ipynb  embedding-network.ipynb  fully-connected-network.ipynb  fully-connected.ipynb  functions.py  masking.ipynb  merging-network.ipynb  operators.ipynb  polynomial-expansion.ipynb  restrictable-layer.ipynb  training.ipynb
examples/out-training/network/: activation.pkl  init.pkl  layers_sizes.json  state_dict.pth
meudon-pdr/data/: README.md  csv_to_pkl.py
nnbma/: __init__.py
nnbma/dataset/: __init__.py  mask_dataset.py  regression_dataset.py
nnbma/layers/: __init__.py  additional_module.py  polynomial_expansion.py  restrictable_linear.py
nnbma/learning/: __init__.py  batch_scheduler.py  loss_functions.py  network_learning.py  regression_metrics.py
nnbma/networks/: __init__.py  densely_connected.py  embedding_network.py  fully_connected.py  merging_network.py  neural_network.py  polynomial_network.py
nnbma/operators/: __init__.py  base.py  normalization.py  operator.py
nnbma/preprocessing/: __init__.py  base.py  normalization.py  operator.py
tests/dataset/: test_mask_dataset.py  test_regression_dataset.py
tests/layers/: test_polynomial_expansion.py  test_restrictable_linear.py
tests/learning/: test_network_learning.py
tests/networks/: test_densely_connected.py  test_embedding_network.py  test_fully_connected.py  test_merging_network.py  test_neural_network.py  test_polynomial_network.py
tests/operators/: test_normalization.py
