[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nnbma"
version = "0.1.0"
authors = [
  "Lucas Einig", "Pierre Palud",
]
keywords = ["machine learning", "neural network"]
description = "Neural network-based model approximation (nnbma)"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
repository = "https://github.com/einigl/ism-model-nn-approximation"

[tool.poetry.dependencies]
python = ">=3.9"
torch = ">=2.0.0, !=2.0.1"
numpy = "^1.20.2"
matplotlib = "^3.6.2"
pandas = ">=1.3.4"
tqdm = "^4.62.3"
more-itertools = "^10.0.0"
jupyter = "^1.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
requests-mock = "^1.10.0"

[tool.poetry.urls]
# Documentation = "https://readthedocs.org"
"Bug Tracker" = "https://github.com/einigl/ism-model-nn-approximation/issues"
