[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nnbma"
version = "0.1.2"
authors = [
  "Lucas Einig", "Pierre Palud",
]
keywords = ["machine learning", "neural network"]
description = "Neural network-based model approximation (nnbma)"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
repository = "https://github.com/einigl/ism-model-nn-approximation"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
numpy = "^1.20.2"
matplotlib = "^3.6.2"
pandas = ">=1.3.4"
tqdm = "^4.62.3"
more-itertools = "^10.0.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
# poetry install installs project in editable mode + dev-dependencies
# poetry install --no-dev
flake8 = "^6.0.0"
black = ">=22.3.0"
isort = "^5.9.3"
pydocstyle = "^6.1.1"
pylint = "^2.11.1"
coverage-badge = ">=1.0.0"
pre-commit = ">=2.15.0"
scipy = "^1.11.3"
scikit-learn = "^1.3.2"

# configuration in docs/conf.py
Sphinx = ">=5.3.0"
# Sphinx extensions https://www.sphinx-doc.org/en/master/usage/extensions/index.html
# Manage bibliography .bib files
# https://github.com/mcmtroffaes/sphinxcontrib-bibtex
sphinxcontrib-bibtex = ">=2.5.0"
# Checks syntax of reStructuredText and code blocks nested within it https://github.com/myint/rstcheck
rstcheck = ">=6.1.1"
# Language server for .rst files
esbonio = ">=0.15.0"
sphinx_rtd_theme = ">=1.2.0"
myst_parser = ">=1.0"
sphinx_design = ">=0.1.0"
sphinx_gallery = ">=0.0.10"
nbsphinx = ">=0.9.0"
nbsphinx_link = ">=1.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-cov = "^2.11.1" # generate coverage report see --cov --cov-report flags
requests-mock = "^1.10.0"

[tool.pytest.ini_options]
# poetry run pytest
minversion = "6.0"
addopts = "-ra -q -vv --cov=nnbma --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]

# For other tools to be black compliant
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html
[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"


[tool.poetry.urls]
Documentation = "https://ism-model-nn-approximation.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/einigl/ism-model-nn-approximation/issues"
